# dbsync

./: .env.template  .gitignore  pyproject.toml
dbsync/: __init__.py  __main__.py
sql/: seed.sql
tests/: test_connection.py
